# afina

./: .clang-format  .gitignore  .rebuild.sh  1.txt  CMakeLists.txt  README.md  TODO  boom_boom.pl  generate_compile_database.sh  single.pl
.ccls-cache/@Users@ama@github@afina/: src@storage@SimpleLRU.cpp  src@storage@SimpleLRU.cpp.blob
_build/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
_build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
_build/afina.build/Debug/ALL_BUILD.build/: Script-A8AFA3205E8B484CA296415F.sh  dgph~
_build/afina.build/Debug/ZERO_CHECK.build/: Script-78875F738ADE428980EDDA21.sh  dgph~
_build/afina.xcodeproj/: project.pbxproj
_build/afina.xcodeproj/project.xcworkspace/xcuserdata/romandegtyarev.xcuserdatad/: UserInterfaceState.xcuserstate
_build/afina.xcodeproj/xcuserdata/romandegtyarev.xcuserdatad/xcschemes/: xcschememanagement.plist
_build/src/: Version.cpp  cmake_install.cmake
_build/src/afina.build/Debug/afina.build/: dgph  dgph~
_build/src/allocator/: cmake_install.cmake
_build/src/allocator/afina.build/Debug/Allocator.build/: dgph  dgph~
_build/src/execute/: cmake_install.cmake
_build/src/execute/afina.build/Debug/Execute.build/: dgph  dgph~
_build/src/network/: cmake_install.cmake
_build/src/network/afina.build/Debug/Network.build/: dgph  dgph~
_build/src/protocol/: cmake_install.cmake
_build/src/protocol/afina.build/Debug/Protocol.build/: dgph  dgph~
_build/src/storage/: cmake_install.cmake
_build/test/: CTestTestfile.cmake  cmake_install.cmake
_build/test/allocator/: CTestTestfile.cmake  cmake_install.cmake
_build/test/allocator/Debug/: runAllocatorTests
_build/test/execute/: CTestTestfile.cmake  cmake_install.cmake
_build/test/network/: CTestTestfile.cmake  cmake_install.cmake
_build/test/protocol/: CTestTestfile.cmake  cmake_install.cmake
_build/test/storage/: CTestTestfile.cmake  cmake_install.cmake
_build/test/storage/Debug/: runStorageTests
benchmark/: README.md  run_bench.pl
cmake/Modules/: ECMEnableSanitizers.cmake  GetGitRevisionDescription.cmake
include/afina/: Executor.h  Storage.h  Version.h
include/afina/allocator/: Error.h  Pointer.h  Simple.h
include/afina/concurrency/: CoreLocal.h  Executor.h  FlatCombine.h  ThreadLocal.h
include/afina/coroutine/: Engine.h
include/afina/execute/: Add.h  Append.h  AppendPrepend.h  Command.h  Delete.h  Get.h  IncrDecr.h  InsertCommand.h  KeyValueCommand.h  MultipleStringsCommand.h  Replace.h  Set.h  Stats.h
include/afina/logging/: Config.h  Service.h
include/afina/network/: Server.h
itest/: AddLogic.pm  AppendLogic.pm  GetBadKey.pm  GetSetTest.pm  GetSeveralsKey.pm  README.md  Server.pm  SeveralCommand.pm  Utils.pm  logic_test.pl  network_test.pl  test.pl
materials/03-process-threads-files/code/fileio/: Makefile  cat.c  flags.c  ls.c
materials/03-process-threads-files/code/threads/: Makefile  badexit  badexit.c  cleanup  cleanup.c  exitstatus  exitstatus.c  id  id.c
materials/04-network-blocking/examples/: client.c  server.c  server2.c
materials/05-non-blocking-network/code/: Makefile  echo  echo.c  echo.h  epoll-example  epoll-example.c
materials/05-non-blocking-network/code/dirty-full-duplex/: echo.c  echo.h
materials/07-synchronization-primitives/code/: Makefile  cv.cpp  lock.cpp  mutex.cpp
materials/08-pipes/examples/: pipe_ls_wc.c  simple_pipe.c
materials/09-advanced-synchronization/code/: Makefile  count_down_latch.cpp  count_down_latch.h  count_down_latch_demo.cpp  shared_mutex.cpp  shared_mutex.h  shared_mutex_demo.cpp
src/: CMakeLists.txt  Version.cpp.in  main.cpp
src/allocator/: CMakeLists.txt  Pointer.cpp  Simple.cpp
src/concurrency/: CMakeLists.txt  Executor.cpp
src/coroutine/: CMakeLists.txt  Engine.cpp
src/execute/: Add.cpp  Append.cpp  AppendPrepend.cpp  CMakeLists.txt  Command.cpp  Delete.cpp  Get.cpp  IncrDecr.cpp  InsertCommand.cpp  KeyValueCommand.cpp  MultipleStringsCommand.cpp  Replace.cpp  Set.cpp  Stats.cpp
src/logger/: CMakeLists.txt  Logger.h
src/logging/: CMakeLists.txt  ServiceImpl.cpp  ServiceImpl.h
src/network/: CMakeLists.txt  Server.cpp  Server.h  Worker.cpp  Worker.h
src/network/blocking/: ServerImpl.cpp  ServerImpl.h
src/network/epoll/: ServerImpl.cpp  ServerImpl.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h
src/network/memcached/: Parser.cpp  Parser.h
src/network/mt_blocking/: ServerImpl.cpp  ServerImpl.h
src/network/mt_nonblocking/: Connection.cpp  Connection.h  ServerImpl.cpp  ServerImpl.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h
src/network/nonblocking/: Connection.cpp  Connection.h  ServerImpl.cpp  ServerImpl.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h
src/network/st_blocking/: ServerImpl.cpp  ServerImpl.h
src/network/st_coroutine/: Connection.cpp  Connection.h  ServerImpl.cpp  ServerImpl.h  Utils.cpp  Utils.h
src/network/st_nonblocking/: Connection.cpp  Connection.h  ServerImpl.cpp  ServerImpl.h  Utils.cpp  Utils.h
src/network/uv/: ServerImpl.cpp  ServerImpl.h  Worker.cpp  Worker.h
src/protocol/: CMakeLists.txt  Executor.cpp  Executor.h  Parser.cpp  Parser.h  TextImpl.common.cpp  TextImpl.h  TextImpl.scanner.rl
src/storage/: .SimpleLRU.cpp.swn  .SimpleLRU.cpp.swo  .SimpleLRU.cpp.swp  CMakeLists.txt  MapBasedGlobalLockImpl.cpp  MapBasedGlobalLockImpl.h  SimpleLRU.cpp  SimpleLRU.h  SimpleLRU_His.cpp  SimpleLRU_His.h  StripedLRU.cpp  StripedLRU.h  ThreadSafeSimpleLRU.cpp  ThreadSafeSimpleLRU.h  tmp  tmp_prog.cpp
src/thread_pool/: thread_pool.h
test/: CMakeLists.txt
test/allocator/: CMakeLists.txt  SimpleTest.cpp
test/coroutine/: CMakeLists.txt  EngineTest.cpp
test/execute/: CMakeLists.txt
test/executor/: CMakeLists.txt  ExecutorTest.cpp
test/network/: CMakeLists.txt  MemcachedParserTest.cpp  test.pl
test/protocol/: CMakeLists.txt  MemcachedParserTest.cpp  TextImplTest.cpp
test/storage/: .StorageTest.cpp.swp  CMakeLists.txt  StorageTest.cpp
(+38 files in other folders)
